force-app/main/default/objects/AccountConnection__c/AccountConnection__c.object-meta.xml
<CustomObject>
    <description>Links multiple accounts together for instance Collection Site to APH Site</description>
    <label>Account Connection</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Connection #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>