force-app/main/default/objects/AccountConnection__c/fields/AccountFrom__c.field-meta.xml
<CustomField>
    <fullName>AccountFrom__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Connections</relationshipLabel>
    <relationshipName>ConnectionsTo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>