force-app/main/default/objects/AccountConnection__c/fields/AccountTo__c.field-meta.xml
<CustomField>
    <fullName>AccountTo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Connection</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Connections (To)</relationshipLabel>
    <relationshipName>ConnectionsFrom</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>