force-app/main/default/objects/AccountConnection__c/fields/SharingCalculationStatus__c.field-meta.xml
<CustomField>
    <fullName>SharingCalculationStatus__c</fullName>
    <description>Status of the sharing recalculation</description>
    <inlineHelpText>Status of the sharing recalculation</inlineHelpText>
    <label>Sharing Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>