force-app/main/default/objects/AccountConnection__c/fields/TransitOffset__c.field-meta.xml
<CustomField>
    <fullName>TransitOffset__c</fullName>
    <description>Value of the Transit Time (in hours)</description>
    <inlineHelpText>Value of the Transit Time (in hours)</inlineHelpText>
    <label>Transit Offset</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>