force-app/main/default/objects/AccountConnection__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Specifies the type of the connection</description>
    <inlineHelpText>Specifies the type of the connection</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goods Supplier</fullName>
            </value>
            <value>
                <fullName>Primary Vendor</fullName>
            </value>
            <value>
                <fullName>Ship-To</fullName>
            </value>
            <value>
                <fullName>Collection Centre</fullName>
            </value>
            <value>
                <fullName>Infusion Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>